# p2p-chlu

./: .gitignore  BLOG.md  PLAN.md  README.md  pyproject.toml
chlu/: __init__.py  __main__.py  cli.py
chlu/baselines/: __init__.py  lstm_baseline.py  node_baseline.py
chlu/core/: __init__.py  chlu_unit.py  hamiltonian.py  integrator.py  langevin.py
chlu/data/: __init__.py  lemniscate.py  sine_wave.py
chlu/experiments/: __init__.py  exp_a_stability.py  exp_b_safety.py  exp_c_generate.py
chlu/training/: __init__.py  contrastive.py  losses.py  replay_buffer.py
chlu/utils/: __init__.py  metrics.py  plotting.py
results/exp_a/checkpoints/: chlu_best.pt
results/exp_b/checkpoints/: chlu_best.pt
results/exp_c/: generated_digits.pt
results/exp_c/checkpoints/: chlu_best.pt
tests/: test_chlu_unit.py  test_hamiltonian.py  test_integrator.py  test_training.py
