[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chlu"
version = "0.1.0"
description = "Causal Hamiltonian Learning Unit — relativistic symplectic neural dynamics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pratik Jawahar" },
    { name = "Maurizio Pierini" },
]
keywords = ["hamiltonian", "symplectic", "neural-ode", "physics-informed", "generative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "torchdiffeq>=0.2.3",
    "torchvision>=0.15",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
chlu = "chlu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chlu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
